[project]
name = "ckt-ktl"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "ckt-info",
  "keyring",
  "pika",
  "python-debian",
  # The python-apt package does not exist on PyPi. Use a PEP508 compatible
  # reference leveraging a pinned version from the official Gitlab repo. The
  # setuptools build process will fetch the remote artifact and run it's
  # setup.py which handles all of the gnarly bindings for us - all without
  # having to touch apt ourselves. The caveat is that the version of the
  # installed package is '0.0.0'.
  "python-apt @ https://salsa.debian.org/apt-team/python-apt/-/archive/2.5.3/python-apt-2.5.3.tar.gz",
]

[tool.setuptools.packages.find]
# Exclude tests (which also prevents recursion due to the symbolic link
# ktl/tests/ktl -> ..)
exclude = ["ktl.tests*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
